--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "docker-vscode-node-typescript-sass",
+    "name": "%PROJECTNAME%",
     "dockerComposeFile": [
         "../docker-compose.yml",
         "docker-compose.extend.yml"
