--- a/package.json
+++ b/package.json
@@ -19,24 +19,26 @@
     "@types/express": "",
     "@types/node": "",
     "@types/redis": "",
-    "browser-sync": "",
-    "del": "",
-    "gulp": "",
-    "gulp-plumber": "",
-    "gulp-sass": "",
-    "path": "",
-    "ts-loader": "",
-    "tslint": "",
-    "tslint-loader": "",
-    "typescript": "",
-    "webpack": "4.17.1",
-    "webpack-cli": "",
-    "webpack-node-externals": ""
+    "browser-sync": "^2.26.7",
+    "del": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0",
+    "path": "^0.12.7",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-stream": "^5.0.0"
   },
   "scripts": {
     "start": "node build/server.js",
     "build": "webpack",
-    "wasm": "sh -c 'bin/wasm-pack.exe build src/public/wasm --target web'",
+    "wasm": "sh -c 'bin/wasm-pack.exe build src/wasm --target web'",
     "commit": "git add -A && git commit",
     "cancel": "git reset --soft HEAD^",
     "push:github": "git remote rm origin && git remote add origin git@github.com:%USERNAME%/%PROJECTNAME%.git && git push origin master",
